--- a/chrome-extension/test-site.html
+++ b/chrome-extension/test-site.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" href="benso.png">
-    <title>Posta - exploit page</title>
+    <title>Posta - testing page</title>
 </head>
 
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="exploit.js"></script></body>
+<script type="text/javascript" src="test-site.js"></script></body>
 
 </html>
